# anyRTC-RTMP-OpenSource

./: .gitignore
AnyCore/: CMakeLists.txt
AnyCore/srs_librtmp/: CMakeLists.txt
Prj-Android/: .gitignore  build.gradle
Prj-Android/app/: build.gradle
Prj-Android/app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  jRTMPGuestImpl.h  jRTMPHosterImpl.h  make-android.sh
Prj-Android/app/src/main/cpp/cmake/: android.cmake  android.toolchain.cmake  copt.cmake  echat_option.cmake  findheaders.cmake  ios.cmake  linux.cmake  mac.cmake
Prj-Android/app/src/main/java/org/anyrtc/core/: AnyRTMP.java
Prj-Android/app/src/main/res/layout/: activity_main.xml
Prj-Android/gradle/wrapper/: gradle-wrapper.properties
webrtc/: CMakeLists.txt
webrtc/base/: checks.cc  event_tracer.cc  format_macros.h  platform_thread.cc
webrtc/common_audio/: CMakeLists.txt
webrtc/common_audio/signal_processing/include/: spl_inl.h
webrtc/common_video/: CMakeLists.txt
webrtc/media/: CMakeLists.txt
webrtc/modules/audio_coding/: CMakeLists.txt
webrtc/modules/audio_device/: CMakeLists.txt
webrtc/modules/video_capture/: CMakeLists.txt
webrtc/system_wrappers/source/: event_timer_posix.cc
